fix: aligned navigation

--- a/style.css
+++ b/style.css
@@ -28,6 +28,14 @@ header {
   height: 60%;
   width: 100%;
 }
+h1 {
+  font-family: sans-serif;
+  font-size: 28px;
+  font-weight: 200;
+  letter-spacing: 0.6px;
+  text-align: center;
+  color: #ffffff;
+}
 .navigation {
   display: flex;
   justify-content: space-around;
@@ -47,6 +55,17 @@ nav ul {
   align-items: center;
   height: 100%;
 }
+.navLi {
+  list-style-type: none;
+  font-family: Work Sans, sans-serif;
+  font-size: 17px;
+  font-weight: 650;
+  padding: 10px;
+  font-family: "Ysabeau SC", sans-serif; /*googl fonts*/
+}
+.navMarginLeft {
+  padding-right: 30%;
+}
 .img-header {
   display: block;
   position: absolute !important;
@@ -55,13 +74,8 @@ nav ul {
   border: 5px solid rgb(255, 255, 255);
   width: 20%;
 }
-.navLi {
-  list-style-type: none;
-  font-family: Work Sans, sans-serif;
-  font-size: 17px;
-  font-weight: 650;
-  padding: 10px;
-  font-family: "Ysabeau SC", sans-serif; /*googl fonts*/
+.navMarginRight {
+  padding-left: 30%;
 }
 .contacts {
   display: flex;
@@ -88,21 +102,6 @@ a {
   color: #000000;
 }
 
-h1 {
-  font-family: sans-serif;
-  font-size: 28px;
-  font-weight: 200;
-  letter-spacing: 0.6px;
-  text-align: center;
-  color: #ffffff;
-}
-.img {
-  display: block;
-  border-radius: 10% 10%;
-  margin: 0 auto;
-  border: 4px solid rgb(255, 0, 0);
-  width: 20%;
-}
 .block {
   display: flex;
   justify-content: space-between;
